--- a/Projeto-Arquitetura/Pages/Shared/_Layout.cshtml
+++ b/Projeto-Arquitetura/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #ba68c8">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: #f9f9fb">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Kwal</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
