formatando img e mudando tom da navbar

--- a/Projeto-Arquitetura/Pages/Index.cshtml
+++ b/Projeto-Arquitetura/Pages/Index.cshtml
@@ -15,6 +15,9 @@
     </head>
     <body>
         <div class="arq-wraper">
+            <div class="imagem-capa">
+                <img src="~/images/arq-moderna-curvas.jpg" alt="Imagem de predio" />
+            </div>
             
         </div>
     </body>
