--- a/Projeto-Arquitetura/Pages/Shared/_Layout.cshtml
+++ b/Projeto-Arquitetura/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="        background-color: #eceeee">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">
-                    <img src="~/images/icon-kwal-2.png" width="40" height="40" class="d-inline-block" />
+                    <img src="~/images/icone-kwal3.jpg" width="40" height="40" class="d-inline-block" />
                     Kwal
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
