--- a/Projeto-Arquitetura/wwwroot/css/style.css
+++ b/Projeto-Arquitetura/wwwroot/css/style.css
@@ -21,3 +21,14 @@
     height: 30rem;
     border-radius: 10px;
 }
+
+h1 {
+    font-family: Courier, monospace;
+    font-weight: 100;
+}
+
+.texto {
+    font-family: monospace;
+    text-align: justify;
+    font-size: medium;
+}
